Fixed social-media buttons css (now better aligned and links not displaying as buttons anymore)

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -59,7 +59,8 @@ button,
     color: white;
     border: #00868B;
 }
-.btn-sustom:hover {
+
+.btn-custom:hover {
     background-color: white;
     color: #00868B;
     border: 1px solid #00868B;
@@ -81,6 +82,15 @@ button,
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1rem;
+}
+
+.social-media-buttons a.social-media {
+    text-decoration: none;
+    color: darkgray;
+}
+
+.social-media-buttons a.social-media:hover {
+    color: #00868B;
 }
 
 .item {
